force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <label>競合</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>競合</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>