force-app/main/default/objects/Competitor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>取引先</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>登録/選択した取引先が事業所レコードタイプではありません。
取引先を新規作成する場合は、事業所として登録してください。</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>競合</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>