force-app/main/default/objects/Competitor__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>競合</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>