force-app/main/default/objects/Competitor__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>強み</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>