force-app/main/default/objects/Competitor__c/fields/weakness__c.field-meta.xml
<CustomField>
    <fullName>weakness__c</fullName>
    <label>弱み</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>